target_link_libraries(Sts1CobcSw_Utility INTERFACE etl::etl)
target_compile_definitions(
    Sts1CobcSw_Utility INTERFACE $<$<CONFIG:Debug,RelWithDebInfo>:ENABLE_DEBUG_PRINT>
)
if(BUILD_BOOTLOADER)
    target_compile_definitions(Sts1CobcSw_Utility INTERFACE BUILD_BOOTLOADER)
else()
    target_link_libraries(Sts1CobcSw_Utility INTERFACE rodos::rodos)
    if(ENABLE_DEBUG_PRINT_STACK_USAGE)
        target_compile_definitions(Sts1CobcSw_Utility INTERFACE ENABLE_DEBUG_PRINT_STACK_USAGE)
    endif()
endif()
if(REDIRECT_RF_OVER_UCI)
    target_compile_definitions(Sts1CobcSw_Utility INTERFACE REDIRECT_RF_OVER_UCI)
endif()
